# gemu

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  cpu.c  cpu.h  cpu_type.h  cpu_types.h  gemu.sln  gemu.vcxproj  gemu.vcxproj.filters  interrupts.c  interrupts.h  joypad.c  joypad.h  lcd_controller.c  lcd_controller.h  main.c  makefile  memory.c  memory.h  opcodes.c  opcodes.h  pre_opcodes.c  pre_opcodes.h  registers.c  registers.h  start.sh  timers.c  timers.h
Gb_Snd_Emu-0.1.4/: Sound_Queue.cpp
_src/: emc.cpp  main.cpp
_src/core/: cpu.h  interrupts.cpp  joypad.cpp  lcd_controller.cpp
_src/gui/: CMakeLists.txt  mainwindow.h
emc/: app.js  main.js  server.js  shell.html  sound.js  style.css
emc/sound/: Noise.js  SoundController.js  Square.js  Square1.js  Square2.js  Wave.js
emc/soundv2/: Channel.js  Noise.js  SoundController.js  Square.js  Square1.js  Square2.js  Wave.js
src/: cpu.c  cpu.h  cpu_types.h  emc.c  emc.cpp  interrupts.c  interrupts.h  joypad.c  joypad.h  lcd_controller.c  lcd_controller.h  main.cpp  memory.c  memory.h  opcodes.c  pre_opcodes.c  pre_opcodes.h  registers.c  sound.cpp  sound.h  timers.c  timers.h
src/core/: cartridge.cpp  cartridge.h  cpu.cpp  cpu.h  cpu_types.h  interrupt.cpp  interrupt.h  interrupts.cpp  interrupts.h  joypad.cpp  joypad.h  lcd_controller.cpp  lcd_controller.h  memory.cpp  memory.h  opcode.cpp  opcode.h  opcodes.cpp  opcodes.h  pre_opcode.cpp  pre_opcode.h  pre_opcodes.cpp  pre_opcodes.h  registers.cpp  registers.h  sound.cpp  sound.h  system.cpp  system.h  system_types.h  timers.cpp  timers.h
src/gui/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui  qt_main.cpp
src/sound/: Basic_Gb_Apu.h
src/utils/: bit_helper.cpp  bit_helper.h  file.cpp  file.h  logger.cpp  logger.h
src/web/: server.js  shell.html
src2/: Main.cpp
src2/core/: System.cpp  System.h
